# concat-idents

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
tests/: fail.rs  fail.stderr  pass.rs
tests/fail/: bool_only_ident.rs  bool_only_ident.stderr  float_in_ident.rs  float_in_ident.stderr  int_at_beginning.rs  int_at_beginning.stderr  int_only_ident.rs  int_only_ident.stderr  no code block.rs  no code block.stderr  no_eq_sign.rs  no_eq_sign.stderr  no_identifier.rs  no_identifier.stderr  no_replace_ident.rs  no_replace_ident.stderr  reserved_keyword_only_with_quotes.rs  reserved_keyword_only_with_quotes.stderr  reserved_keyword_without_quotes.rs  reserved_keyword_without_quotes.stderr  space_char.rs  space_char.stderr  space_string.rs  space_string.stderr
