[package]
name = "concat-idents"
version = "1.0.0"
authors = ["Dzenan Jupic <info@dzenanjupic.de>"]
license = "MIT"
description = "Allows concatenating multiple identifiers and using them everywhere"
repository = "https://github.com/DzenanJupic/concat-idents"
readme = "README.md"
edition = "2018"
include = [
    "src/*.rs",
    "tests/*.rs",
    "tests/*.stderr",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.30", features = ["full", "visit-mut"] }
quote = "1.0.6"

[dev-dependencies]
trybuild = "1.0.31"
