[package]
name = "concat-idents"
version = "1.1.1"
authors = ["Dzenan Jupic <info@dzenanjupic.de>"]
license = "MIT"
description = "Allows concatenating multiple identifiers and using them everywhere"
repository = "https://github.com/DzenanJupic/concat-idents"
readme = "README.md"
edition = "2018"
include = [
    "src/*.rs",
    "tests/*.rs",
    "tests/*.stderr",
    "tests/fail/*.rs",
    "tests/fail/*.stderr",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.55", features = ["full", "visit-mut"] }
quote = "1.0.8"

[dev-dependencies]
trybuild = "1.0.38"
