[package]
name = "concat-idents"
version = "1.1.1"
authors = ["Dzenan Jupic <info@dzenanjupic.de>"]
license = "MIT OR Apache-2.0"
description = "Allows concatenating multiple identifiers and using them everywhere"
keywords = ["concat", "idents", "concatenate", "combine", "names"]
repository = "https://github.com/DzenanJupic/concat-idents"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/concat-idents"
include = [
    "src/*.rs", "Cargo.toml",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.55", features = ["full", "visit-mut"] }
quote = "1.0.8"

[dev-dependencies]
trybuild = "1.0.38"
